--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About VEXOR</title>
+  <title>About VEXOR | Independent Workforce Audit Practice</title>
+  <meta name="description" content="VEXOR is an independent workforce audit practice providing objective employee, team, and organizational capability evaluations." />
 
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 
@@ -14,6 +15,7 @@
       --text-main: #e6e6e6;
       --text-muted: #9aa0aa;
       --border: #232736;
+      --text-primary: #e6eaf2;
     }
 
     * {
@@ -65,6 +67,11 @@
       letter-spacing: 2px;
     }
 
+    .logo:hover {
+      text-decoration: none;
+      color: var(--text-primary);
+    }
+
     .nav-links a {
       margin-left: 28px;
       text-decoration: none;
@@ -81,6 +88,8 @@
   margin: 0 auto;
   padding: 0 24px;
 }
+
+
 
 
 
@@ -124,7 +133,7 @@
     <h1>About VEXOR</h1>
     <p>
       VEXOR is an independent workforce audit practice focused on objective capability evaluation,
-      execution risk identification, and organizational readiness assessment.
+      execution risk identification, and organizational readiness assessment across employees, teams, and organizations.
     </p>
   </div>
 </header>
@@ -141,7 +150,7 @@
       <p>
         Our evaluations go beyond resumes, designations, and self-reported performance.
         We assess actual capability depth, decision-making maturity, dependency risks,
-        and readiness for current and future operating conditions.
+        and readiness for defined operating conditions.
       </p>
       <p>
         VEXOR audits deliver structured findings, risk indicators, and decision inputs — not implementation mandates or advisory ownership.
@@ -159,9 +168,9 @@
       assumed rather than verified.
     </p>
     <p>
-      VEXOR was established to address this gap.
-      To provide leadership with an objective view of whether people, roles,
-      and structures are truly capable of supporting stated goals.
+      VEXOR was established to address this gap —
+      providing leadership with an objective view of whether people, roles,
+      and structures are capable of supporting stated goals.
     </p>
     <p>
       Our work exists for organizations that value truth over comfort
@@ -186,7 +195,7 @@
       </p>
       <p>
         Organizations seeking validation, cosmetic audits, or
-        pre-decided outcomes are not a fit.
+        pre-decided outcomes are not a fit for VEXOR engagements.
       </p>
     </div>
   </div>
@@ -203,7 +212,7 @@
     </p>
     <p>
       We do not align incentives with hiring, promotions, layoffs, or organizational restructuring.
-      Our role ends at evaluation and reporting.
+      Our role ends strictly at evaluation and reporting.
     </p>
     <p>
       This separation is intentional. It preserves audit integrity and prevents conflicts of interest.
@@ -224,7 +233,7 @@
         evaluation criteria, and evidence-backed observations.
       </p>
       <p>
-        Engagements begin with either a written request or a professional discussion to assess
+        Engagements begin with either a written request or a paid professional discussion to assess
         suitability, audit depth, and organizational context.
       </p>
       <p>
@@ -251,9 +260,14 @@
       We believe workforce truth, even when uncomfortable, is more valuable than
       agreeable narratives.
     </p>
+    <p>
+      VEXOR does not provide opinions for employment actions and does not participate
+      in disciplinary, termination, or promotion decisions.
+    </p>
   </div>
 </section>
 
+<!-- VEXOR operates as an independent evaluation practice and does not offer consulting, advisory, or implementation services. -->
 
 <div id="footer"></div>
 <script src="assets/js/include.js"></script>
