--- a/employee-audit.html
+++ b/employee-audit.html
@@ -15,6 +15,7 @@
       --text-muted: #9aa0aa;
       --accent: #7f8cff;
       --border: #232736;
+      --text-primary: #e6eaf2;
     }
 
     * {
@@ -43,6 +44,11 @@
       font-size: 20px;
       font-weight: 600;
       letter-spacing: 2px;
+    }
+
+    .logo:hover {
+      text-decoration: none;
+      color: var(--text-primary);
     }
 
     .nav-links a {
@@ -245,6 +251,34 @@
   </section>
 
   <section>
+    <div class="container">
+      <div class="card">
+        <h2>Capability Score Overview</h2>
+        <p>
+          Each Employee Audit produces a structured capability score derived from
+          multiple evaluation dimensions.
+        </p>
+        <p>
+          Scores represent <strong>observed execution strength</strong> —
+          not potential, intent, or historical performance.
+        </p>
+
+        <ul>
+          <li><strong>Role Fit Score</strong> — alignment between role demands and demonstrated capability</li>
+          <li><strong>Execution Reliability</strong> — consistency under real-world pressure</li>
+          <li><strong>Judgment & Ownership Index</strong> — decision quality and accountability</li>
+          <li><strong>Future Readiness Signal</strong> — adaptability to increased scope or complexity</li>
+        </ul>
+
+        <p class="note">
+          Scores are comparative indicators, not rankings against other employees.
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
     <h2>Audit Levels</h2>
     <div class="levels">
       <div class="level">
@@ -271,7 +305,6 @@
     <li>Scenario-driven evaluation aligned to role complexity</li>
     <li>Structured one-on-one audit interaction</li>
     <li>Independent scoring across predefined dimensions</li>
-    <li>Independent scoring across predefined dimensions</li>
     </ul>
       </div>
     </div>
@@ -290,6 +323,22 @@
   </section>
 
   <section>
+    <h2>How Scores Are Used</h2>
+    <p>
+      Audit scores are designed for leadership decision support —
+      not for compensation modeling or public comparison.
+    </p>
+
+    <ul>
+      <li>Scores appear only in the executive audit report</li>
+      <li>Individual dimension scores are grouped into decision themes</li>
+      <li>No raw scoring sheets are shared beyond the audit boundary</li>
+      <li>Findings emphasize risk and readiness, not numerical performance</li>
+    </ul>
+  </section>
+
+
+  <section>
     <div class="container">
       <div class="card">
     <h2>Engagement & Conduct Guidelines</h2>
@@ -299,6 +348,15 @@
     <li>Participants are expected to cooperate honestly and professionally.</li>
     <li>Audit outcomes may influence appraisal, role change, transfer, or separation decisions.</li>
     </ul>
+
+    <section>
+      <p class="note">
+        Detailed scoring logic, weightage models, and evaluator calibration
+        documentation are maintained internally as audit appendices and
+        are not distributed as part of standard client deliverables.
+      </p>
+    </section>
+
 
     <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
       </div>
