--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@
   <h2>Engagement Basics</h2>
 
   <p><strong>What does VEXOR actually do?</strong><br>
-    VEXOR conducts independent audits of employees, teams, and organizations to evaluate capability alignment, execution readiness, and workforce risk. Our role is evaluative, not advisory or operational.
+    VEXOR conducts independent audits of employees, teams, and organizations to evaluate capability alignment, execution readiness, and workforce risk indicators. Our role is evaluative, not advisory or operational.
   </p>
 
   <p><strong>Is VEXOR a consulting or recruitment firm?</strong><br>
@@ -59,7 +59,7 @@
   </p>
 
   <p><strong>What does the audit process involve?</strong><br>
-    Audits may include structured interviews, role-based assessments, behavioral evaluation, documentation review, and observation. The exact approach depends on scope and context.
+    Audits may include structured interviews, role-based assessments, observation of decision-making and execution behaviors, documentation review, and contextual analysis. The exact approach depends on scope and context.
   </p>
 
   <p><strong>Do you audit individuals or entire organizations?</strong><br>
@@ -74,11 +74,16 @@
   </p>
 
   <p><strong>Does VEXOR provide recommendations?</strong><br>
-    Reports may include professional observations and directional considerations. However, VEXOR does not prescribe actions or participate in implementation decisions.
+Reports include documented observations and contextual considerations.
+VEXOR does not prescribe actions, recommend specific decisions,
+or participate in implementation or execution.
   </p>
 
   <p><strong>Can audit findings affect employee outcomes?</strong><br>
-    Audit findings may inform leadership decisions related to role changes, restructuring, or performance actions. Responsibility for such decisions rests solely with the client.
+Audit findings may inform leadership decisions related to role changes,
+restructuring, or performance actions. Responsibility for interpretation,
+decision-making, communication, and outcomes rests solely with the client.
+VEXOR does not participate in or influence execution of such decisions.
   </p><br>
 
   <!-- Commercial & Practical -->
@@ -104,12 +109,27 @@
   </p>
 
   <p><strong>Is audit data confidential?</strong><br>
-    Yes. All engagement data is treated as confidential and used solely for the purpose of the audit.
+Yes. All engagement data is treated as confidential and used solely
+for the purpose of the audit, in accordance with defined scope
+and designated decision authority.
   </p>
 
   <p><strong>Can reports be shared publicly?</strong><br>
     No. Audit reports may not be shared externally without prior written consent from VEXOR.
   </p>
+
+  <h2>What VEXOR Will Not Answer</h2>
+
+<p><strong>Will VEXOR tell us who to hire, fire, promote, or replace?</strong><br>
+  No. VEXOR does not make personnel decisions or provide directives.
+  Our role ends at presenting observed risks and patterns.
+</p>
+
+<p><strong>Will VEXOR justify management decisions?</strong><br>
+  No. Audit outputs are not endorsements and may not be used
+  to retroactively justify decisions.
+</p>
+
 
 </section>
 
