--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VEXOR | Workforce Audit & Organizational Readiness</title>
-  <meta name="description" content="VEXOR conducts independent employee, team, and organization audits to evaluate workforce readiness, role alignment, and execution risk." />
+  <title>VEXOR | Independent Workforce & Capability Audits</title>
+  <meta name="description" content="VEXOR is an independent audit firm conducting employee, team, and organizational evaluations to assess workforce capability, role alignment, and execution risk." />
   <link rel="stylesheet" href="styles.css" />
   <style>
     
@@ -64,11 +64,12 @@
       <h1>Workforce Risk Exists.<br>We Measure It.</h1>
       <p class="hero-subtitle">
         VEXOR is an independent workforce audit firm evaluating whether employees, teams,
-        and organizations are truly aligned with their roles, responsibilities, and future demands.
+        and organizations are aligned with defined roles, responsibilities, and operational expectations.
       </p>
       <p>
-        Independent evaluations focused on execution risk, role misalignment, and workforce readiness — before these issues surface as business failures.
+        Independent evaluations focused on execution risk, role misalignment, and workforce readiness — before these issues surface as material operational concerns.
       </p>
+
       <div class="hero-actions">
         <a href="audits.html" class="btn primary">Explore Audits</a>
         <a href="request-discussion.html" class="btn secondary">Request Professional Discussion</a>
@@ -86,8 +87,8 @@
   </div>
 
   <div class="metric-card">
-    <strong>People Risk Index</strong>
-    <span>Hidden dependency and failure exposure</span>
+    <strong>People Risk Signals</strong>
+    <span>Hidden dependency and execution exposure</span>
   </div>
     </div>
   </div>
@@ -122,7 +123,7 @@
           Individual capability audits assessing role alignment, technical depth,
           behavioral maturity, and future readiness.
         </p>
-        <a href="employee-audit.html">Learn more →</a>
+        <a href="employee-audit.html">Audit scope →</a>
       </div>
       <div class="audit-card">
         <h3>Teams</h3>
@@ -130,7 +131,7 @@
           Team-level audits identifying collaboration gaps, leadership dependency,
           execution friction, and delivery risk.
         </p>
-        <a href="team-audit.html">Learn more →</a>
+        <a href="team-audit.html">Audit scope →</a>
       </div>
       <div class="audit-card">
         <h3>Organizations</h3>
@@ -138,7 +139,7 @@
           Enterprise-wide audits evaluating workforce structure, role clarity,
           succession readiness, and execution resilience.
         </p>
-        <a href="organization-audit.html">Learn more →</a>
+        <a href="organization-audit.html">Audit scope →</a>
       </div>
     </div>
   </div>
@@ -246,9 +247,9 @@
   <div class="container">
     <h2>How Engagement Works</h2>
     <div class="steps">
-      <div class="step">1. Submit a written request or opt for a live professional discussion</div>
-      <div class="step">2. Request review and suitability assessment</div>
-      <div class="step">3. Scope definition and audit feasibility</div>
+      <div class="step">1. Submit a written request or request a paid professional discussion</div>
+      <div class="step">2. Request review and engagement suitability assessment</div>
+      <div class="step">3. Scope definition, feasibility, and commercial alignment</div>
       <div class="step">4. Structured audit execution and findings delivery</div>
     </div>
   </div>
@@ -265,11 +266,11 @@
     </p>
     <a href="request-discussion.html" class="btn primary large">Request Professional Discussion</a>
     <p style="font-size:13px; color:var(--text-muted); margin-top:12px;">
-  Written requests are reviewed without obligation. Live discussions are paid and limited.
-</p>
-
+      Written requests are reviewed without obligation. Live professional discussions are paid, limited, and subject to suitability.
+    </p>
   </div>
 </section>
+<!-- VEXOR provides independent evaluations only and does not offer advisory, consulting, or employment decision services. -->
 
 <!-- Footer -->
 
