--- a/legal-guidelines.html
+++ b/legal-guidelines.html
@@ -172,6 +172,12 @@
   VEXOR does not participate in implementation, change management,
   or execution of decisions arising from audit outcomes.
 </p>
+<p>
+  All findings are descriptive and analytical in nature.
+  They do not constitute performance ratings, psychological evaluations,
+  disciplinary judgments, or certifications of suitability for any role.
+</p>
+
       </div>
     </div>
 
@@ -227,15 +233,50 @@
       <div class="card">
     <h2>Impact & Use of Findings</h2>
     <p>
-      Audit outcomes may influence decisions related to appraisal, role change, transfer, restructuring, or termination. VEXOR is not responsible for decisions made by the client based on audit findings.
+      Audit outcomes may be considered as one of multiple inputs
+in organizational decision-making processes.
+
     </p>
     <p>
   VEXOR does not mediate disputes, justify prior decisions,
   or provide validation for predetermined outcomes.
 </p>
+<p>
+  Team and organizational insights reflect systemic patterns,
+  structural conditions, and aggregated risk signals.
+  They are not representations of individual performance or intent.
+</p>
+
       </div>
     </div>
   </section>
+
+  <section>
+    <div class="container">
+      <div class="card">
+        <h2>Individual Insight Sheets</h2>
+        <p>
+          In certain organizational or team-level engagements, VEXOR may provide
+          Individual Insight Sheets as part of a consolidated audit dossier.
+        </p>
+        <p>
+          These sheets present role-contextual observations and risk indicators
+          without evaluative scoring, labeling, or judgment of individuals.
+        </p>
+        <ul>
+          <li>Insight Sheets are delivered only to explicitly authorized client representatives.</li>
+          <li>They are not intended for direct employee disclosure.</li>
+          <li>They do not prescribe actions or decisions.</li>
+          <li>They must be interpreted in aggregate and organizational context.</li>
+        </ul>
+        <p>
+          VEXOR does not validate, justify, or endorse personnel decisions
+          based on isolated interpretation of individual insights.
+        </p>
+      </div>
+    </div>
+  </section>
+
 
   <section>
     <h2>Payments & Engagement Terms</h2>
@@ -274,6 +315,15 @@ or consequential outcomes arising from reliance on audit findings.
     VEXOR reserves the right to decline or terminate engagements
     where independence, safety, ethical standards, or professional
     objectivity cannot be reasonably maintained.
+  </p>
+</section>
+
+<section>
+  <h2>Governing Law & Jurisdiction</h2>
+  <p>
+    All engagements and disputes shall be governed by the laws of India.
+    Jurisdiction shall lie exclusively with courts located in New Delhi,
+    unless otherwise agreed in writing.
   </p>
 </section>
 
