--- a/methodology.html
+++ b/methodology.html
@@ -148,7 +148,7 @@
   <div class="container">
     <h1>Audit Methodology</h1>
     <p>
-      VEXOR follows a structured, evidence-driven audit methodology designed to surface capability, execution, and readiness risks.
+      VEXOR follows a structured, evidence-driven audit methodology designed to surface capability, execution, and readiness risks indicators.
       The methodology prioritizes observation and validation over opinion or advisory judgment.
     </p>
     <p>
@@ -171,6 +171,12 @@
         <li><strong>Independence:</strong> VEXOR does not participate in implementation or decision execution.</li>
         <li><strong>Context awareness:</strong> Capability is assessed relative to role, scale, and operating environment.</li>
       </ul>
+      <p class="note">
+  VEXOR audits do not assign individual ratings, labels, or judgments.
+  Individual-level observations, where applicable, are contextual,
+  non-evaluative, and used solely to understand systemic patterns.
+</p>
+
     </div>
   </div>
 </section>
@@ -200,7 +206,7 @@
         Audits rely on structured signal collection rather than self-reported performance claims.
       </p>
       <ul>
-        <li>Behavioral indicators</li>
+        <li>Observed operational and decision-making behaviors</li>
         <li>Decision ownership patterns</li>
         <li>Execution artifacts and outputs</li>
         <li>Interaction and dependency signals</li>
@@ -228,11 +234,17 @@
         Findings are framed in terms of risk exposure and readiness rather than performance ratings.
       </p>
       <ul>
-        <li>Capability gaps</li>
+        <li>Capability coverage gaps</li>
         <li>Execution bottlenecks</li>
         <li>Structural or leadership stress points</li>
         <li>Future scalability risks</li>
       </ul>
+      <p class="note">
+  Any internal scoring or normalization processes, where used, are
+  analytical tools and are not disclosed or interpreted as ratings
+  of individuals or teams.
+</p>
+
     </div>
 
     <div class="card">
@@ -280,6 +292,12 @@
     <p class="note">
       Organization-wide audits require mandatory pre-engagement discussion due to scale and systemic impact.
     </p>
+    <p class="note">
+  Access to audit outputs varies by scope and authority.
+  Individual-level insights, where generated, are confidential
+  and shared only with designated decision authorities.
+</p>
+
   </div>
 </section>
 
