--- a/organization-audit.html
+++ b/organization-audit.html
@@ -232,6 +232,36 @@
   </section>
 
   <section>
+    <div class="container">
+      <div class="card">
+        <h2>Organizational Readiness Score Overview</h2>
+        <p>
+          The Organization Audit produces an integrated readiness score reflecting
+          whether the organization can reliably execute its strategy under current
+          and future operating conditions.
+        </p>
+        <p>
+          This score is not a financial rating or cultural assessment.
+          It represents execution capacity across leadership, structure, and systems.
+        </p>
+
+        <ul>
+          <li><strong>Leadership Depth Index</strong> — redundancy, succession, and decision resilience</li>
+          <li><strong>Hierarchy Stress Signal</strong> — load concentration and escalation pressure</li>
+          <li><strong>Systemic Dependency Risk</strong> — fragility created by key-person or team reliance</li>
+          <li><strong>Execution Reliability Score</strong> — consistency of delivery under complexity</li>
+          <li><strong>Scalability Readiness</strong> — ability to grow without structural breakdown</li>
+        </ul>
+
+        <p class="note">
+          Organizational scores represent system health, not individual or departmental performance.
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
     
     <h2>Audit Structure</h2>
     <p>Organization Audits are never standardized; structure emerges from leadership context and organizational complexity.</p>
@@ -280,9 +310,33 @@
       Organizations completing the full audit may be issued a VEXOR Rating (Grade A, B, or C),
       representing overall execution readiness for the evaluated period.
     </p>
+    <section>
+      <p class="note">
+        VEXOR Ratings represent execution readiness for a defined period only.
+        They are not certifications, guarantees, or endorsements of financial,
+        legal, or operational outcomes.
+      </p>
+    </section>
+
     </div>
       
   </section>
+
+  <section>
+    <h2>How Leadership Should Use This Assessment</h2>
+    <p>
+      Organizational readiness scores are designed to support high-impact leadership
+      decisions — not to justify predetermined actions.
+    </p>
+
+    <ul>
+      <li>Scores identify execution risk before growth, restructuring, or capital deployment</li>
+      <li>Signals highlight where leadership attention is structurally required</li>
+      <li>Ratings should be interpreted alongside qualitative findings</li>
+      <li>No comparative benchmarking across organizations is provided</li>
+    </ul>
+  </section>
+
 
   <section>
     <div class="container">
@@ -296,6 +350,14 @@
     <li>Auditors do not disclose personal or professional background details.</li>
     <li>Findings may influence restructuring, leadership changes, investment decisions, or workforce realignment.</li>
     </ul>
+    <section>
+      <p class="note">
+        Detailed scoring models, weighting logic, correlation frameworks,
+        and evaluator calibration methods are maintained as internal audit appendices
+        and are not shared outside VEXOR.
+      </p>
+    </section>
+
 
     <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
   
