--- a/packages.html
+++ b/packages.html
@@ -191,6 +191,12 @@
     Each engagement is governed by professional judgment, contextual complexity,
     and risk exposure rather than feature inclusion.
   </p>
+  <p class="note">
+  Package descriptions indicate typical engagement patterns.
+  Final scope, depth, methodology, and deliverables are confirmed
+  only through professional discussion and formal engagement terms.
+</p>
+
 </section>
 
 
@@ -198,6 +204,12 @@
 <section>
   <h2>Employee Audit</h2>
   <p>Individual capability and role-alignment evaluation.</p>
+  <p class="note">
+    Employee Audits are conducted for organizational decision support.
+    Findings are delivered only to authorized client representatives
+    and are not intended as performance appraisals or employee disclosures.
+  </p>
+
 
   <div class="grid">
     <div class="card">
@@ -207,7 +219,7 @@
         <li>~45 evaluation attributes</li>
         <li>Role–skill alignment</li>
         <li>Structured interview</li>
-        <li>Score-based assessment</li>
+        <li>Signal-based scoring indicators</li>
       </ul>
       <a href="request-discussion.html" class="cta">Request Discussion</a>
     </div>
@@ -218,7 +230,7 @@
       <ul>
         <li>~85 evaluation attributes</li>
         <li>Behavior & execution signals</li>
-        <li>Psychometric indicators</li>
+        <li>Cognitive risk indicators</li>
         <li>Expanded evaluator remarks</li>
       </ul>
       <a href="request-discussion.html" class="cta">Request Discussion</a>
@@ -263,11 +275,16 @@
         <li>Advanced individual audits</li>
         <li>Leadership & ownership signals</li>
         <li>Execution bottleneck mapping</li>
-        <li>Decision-grade team insights</li>
+        <li>Decision-support team insights</li>
       </ul>
       <a href="request-discussion.html" class="cta">Request Discussion</a>
     </div>
   </div>
+  <p class="note">
+  Team audits focus on collective execution patterns and structural dynamics.
+  Individual observations, where included, are contextual and non-evaluative.
+</p>
+
 </section>
 
 <!-- ORGANIZATION AUDIT -->
@@ -284,8 +301,14 @@
       <li>Cross-team capability analysis</li>
       <li>Systemic risk identification</li>
       <li>Decision-oriented strategic clarity</li>
-      <li>Optional VEXOR Organizational Rating (A/B/C)</li>
+      <li>Optional internal organizational classification (A/B/C)</li>
     </ul>
+    <p class="note">
+  Organizational classifications are internal analytical constructs
+  intended solely for client decision-making and comparative context.
+  They do not represent certifications, rankings, or public endorsements.
+</p>
+
 
     <p><strong>Pricing:</strong> Defined post evaluation discussion</p>
     <p class="mandatory">
