--- a/request-discussion.html
+++ b/request-discussion.html
@@ -318,14 +318,20 @@ button.cta.loading::after {
   <div id="header"></div>
 
   <header>
-    <h1>Request a Professional Evaluation Discussion</h1>
+    <h1>Request a Professional Audit Discussion</h1>
     <p>
-      This discussion is designed for decision-makers who want clarity before engaging VEXOR for an audit. It is not a sales call. 
+      This discussion is designed for decision-makers who want clarity before engaging VEXOR for an audit engagement.
+ It is not a sales call. 
       <br>Submit a structured request to determine audit suitability, scope, and next steps.<br>
     Written requests are reviewed asynchronously at no charge.<br>  
 Live discussions are paid and scheduled only after payment confirmation.
 
     </p>
+    <p class="note">
+  Discussions are limited to engagement qualification, scope alignment,
+  and risk context. No recommendations, advice, or solutions are provided.
+</p>
+
   </header>
 
   <section>
@@ -369,7 +375,9 @@ Live discussions are paid and scheduled only after payment confirmation.
     </div>
 
     <div class="warning">
-      <strong>Important:</strong> Payment is required to schedule this discussion. This fee is for professional evaluation time and does not guarantee engagement.
+      <strong>Important:</strong> Payment is required to schedule this discussion.
+This fee covers professional time for audit qualification and scope assessment
+and does not guarantee engagement.
     </div>
 <p style="font-size:13px; color:var(--text-muted); margin-top:10px;">
   Payments are processed securely via PayPal, Debit Card, Credit Card in USD.
@@ -381,7 +389,7 @@ Live discussions are paid and scheduled only after payment confirmation.
       <div class="card">
     <h2>Engagement Guidelines</h2>
     <ul>
-      <li>This discussion is not a consultation or advisory service</li>
+      <li>This discussion is not a consultation, advisory, or problem-solving session</li>
       <li>No reports or written outputs are provided</li>
       <li>Respectful and honest communication is expected</li>
       <li>Discussions may influence audit eligibility</li>
@@ -407,7 +415,7 @@ Live discussions are paid and scheduled only after payment confirmation.
   <section id="discussion-form">
   <h2>Submit Your Request</h2>
   <p>
-    This form is intended for decision-makers seeking a professional evaluation before engaging VEXOR.
+    This form is intended for decision-makers seeking audit clarity before engaging VEXOR.
   </p>
 
   <div class="card">
@@ -526,7 +534,9 @@ Live discussions are paid and scheduled only after payment confirmation.
       <!-- Consent -->
       <label class="checkbox">
         <input type="checkbox" name="consent" required>
-        <span>I acknowledge that this request is for professional evaluation only and does not constitute advisory or consulting services.</span>
+        <span>I acknowledge that this request is for audit qualification and scope clarification only
+and does not constitute advisory or consulting services.
+</span>
       </label>
 
       <label class="checkbox">
