--- a/team-audit.html
+++ b/team-audit.html
@@ -242,6 +242,35 @@
   </section>
 
   <section>
+    <div class="container">
+      <div class="card">
+        <h2>Team Capability Score Overview</h2>
+        <p>
+          Team Audits produce a composite capability score that reflects how the team
+          functions as a system — not the average strength of its members.
+        </p>
+        <p>
+          Scores are based on observed execution patterns, decision flow,
+          and dependency structures across the team.
+        </p>
+
+        <ul>
+          <li><strong>Collective Execution Score</strong> — ability to deliver outcomes together</li>
+          <li><strong>Dependency Risk Index</strong> — concentration of knowledge, authority, or effort</li>
+          <li><strong>Leadership Load Signal</strong> — stress on formal or informal leaders</li>
+          <li><strong>Coordination & Flow Health</strong> — clarity of ownership and handoffs</li>
+          <li><strong>Scalability Readiness</strong> — ability to absorb complexity without breakdown</li>
+        </ul>
+
+        <p class="note">
+          Team scores highlight structural risk and resilience — not individual performance rankings.
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
     <h2>Audit Structure</h2>
     <p>The Team Audit follows a fixed structure to ensure consistency and comparability.</p>
     <div class="grid">
@@ -284,6 +313,22 @@
   </section>
 
   <section>
+    <h2>How Team Scores Are Interpreted</h2>
+    <p>
+      Team Audit scores are intended to support leadership decisions about structure,
+      resourcing, and execution risk — not performance appraisal.
+    </p>
+
+    <ul>
+      <li>Scores are presented as system-level indicators, not individual grades</li>
+      <li>Dependency risks are highlighted before numerical summaries</li>
+      <li>Leadership stress signals are contextual, not evaluative</li>
+      <li>No comparative ranking between teams is provided</li>
+    </ul>
+  </section>
+
+
+  <section>
     <div class="container">
       <div class="card">
     <h2>Engagement & Conduct Guidelines</h2>
@@ -294,6 +339,14 @@
     <li>Participants are expected to cooperate honestly and professionally.</li>
     <li>Findings may influence restructuring, leadership changes, or role adjustments.</li>
     </ul>
+
+    <section>
+      <p class="note">
+        Detailed scoring mechanics, dependency models, and evaluator calibration
+        frameworks are maintained as internal audit appendices and are not
+        distributed as part of standard client deliverables.
+      </p>
+    </section>
 
     <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
   
