--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,6 +42,12 @@
     VEXOR respects privacy and is committed to handling information in a responsible,
     limited, and purpose-bound manner.
   </p><br>
+  <p>
+  This policy applies to information processed in connection with
+  VEXOR professional engagements and interactions, subject to
+  applicable local data protection laws.
+</p><br>
+
 
   <h2>Information We Collect</h2>
   <p>
@@ -57,7 +63,7 @@
   <h2>How Information Is Used</h2>
   <p>
     Information is used strictly for professional communication,
-    engagement evaluation, audit execution, and administrative purposes.
+    engagement qualification, audit execution, and administrative purposes.
   </p>
   <p>
     VEXOR does not use personal or organizational data for marketing,
@@ -73,6 +79,11 @@
     such as payment processors or contact form providers solely to enable
     requested functionality.
   </p><br>
+  <p>
+  VEXOR does not control and is not responsible for the privacy practices
+  of third-party platforms used solely to facilitate payments or communication.
+</p><br>
+
 
   <h2>Data Retention & Security</h2>
   <p>
@@ -87,10 +98,13 @@
   <h2>Your Rights & Contact</h2>
   <p>
     You may request clarification, correction, or deletion of your information
-    by contacting VEXOR directly.
+    by contacting VEXOR by contacting VEXOR through the official communication channels
+listed on this website.
   </p>
   <p>
-    Continued interaction with VEXOR constitutes consent to this privacy policy.
+    Continued interaction with VEXOR, including form submissions,
+constitutes acknowledgment of and consent to this privacy policy.
+
   </p>
 </section>
 
